force-app/main/default/objects/SiteSurvey_RequiredSkills__c/SiteSurvey_RequiredSkills__c.object-meta.xml
<CustomObject>
    <label>SiteSurvey RequiredSkills</label>
    <nameField>
        <label>RequiredSkills Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SiteSurvey RequiredSkills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>