force-app/main/default/objects/SiteSurvey_RequiredSkills__c/fields/Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey__c</fullName>
    <label>Site Survey</label>
    <referenceTo>Site_Survey__c</referenceTo>
    <relationshipName>RequiredSkills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>