force-app/main/default/objects/SiteSurvey_RequiredSkills__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill Level</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>