force-app/main/default/objects/SiteSurvey_RequiredSkills__c/fields/Skill_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Skill_Record_Id__c</fullName>
    <label>Skill Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>